--- a/testTask/index.html
+++ b/testTask/index.html
@@ -375,40 +375,100 @@
                         является государственной и работает при поддержке правительства,
                         поэтому ни один участник не рискует ничем.
                     </p>
-                  <div class="news-how-to">
-                    <b><span>Как присоединиться к проекту “АграрКапитал”</span></b>
-                      <ul class="how-to-list">
-                        <li class="list-item">1. <u><a class="text-link" href="#" target="_blank">Перейдите по этой ссылке</a></u> на <a class="text-link" href="#" target="_blank">официальный
-                          сайт платформы “АграрКапитал”.</a></li>
-                        <li class="list-item">2. <a class="text-link" href="#" target="_blank">Зарегистрируйтесь <u>на сайте</u></a>, внимательно и правильно заполнив все поля формы.</li>
-                        <li class="list-item">3. Дождитесь звонка от менеджера <a class="text-link" href="#" target="_blank">платформы</a> на ваш мобильный номер телефона и подтвердите
-                          <u>регистрацию</u>.</li>
-                        <li class="list-item">4. Выберите желаемую сумму и получите первую выплату уже к вечеру этого дня.</li>
-                      </ul>
-                      <a class="submit-button" href="#" target="_blank">Подать заявку</a>
+                    <div class="news-how-to">
+                        <b><span>Как присоединиться к проекту “АграрКапитал”</span></b>
+                        <ul class="how-to-list">
+                            <li class="list-item">1. <u><a class="text-link" href="#" target="_blank">Перейдите по этой
+                                ссылке</a></u> на <a class="text-link" href="#" target="_blank">официальный
+                                сайт платформы “АграрКапитал”.</a></li>
+                            <li class="list-item">2. <a class="text-link" href="#" target="_blank">Зарегистрируйтесь <u>на
+                                сайте</u></a>, внимательно и правильно заполнив все поля формы.
+                            </li>
+                            <li class="list-item">3. Дождитесь звонка от менеджера <a class="text-link" href="#"
+                                                                                      target="_blank">платформы</a> на
+                                ваш мобильный номер телефона и подтвердите
+                                <u>регистрацию</u>.
+                            </li>
+                            <li class="list-item">4. Выберите желаемую сумму и получите первую выплату уже к вечеру
+                                этого дня.
+                            </li>
+                        </ul>
+                        <a class="submit-button" href="#" target="_blank">Подать заявку</a>
                     </div>
-                  <div class="tags-container">
-                    <div class="tags-block">
-                      <span>тэги:</span>
-                      <a class="tags-link" href="#" target="_blank">успех</a>,
-                      <a class="tags-link" href="#" target="_blank">акции</a>,
-                      <a class="tags-link" href="#" target="_blank">тэг</a>,
-                      <a class="tags-link" href="#" target="_blank">пенсия</a>,
-                      <a class="tags-link" href="#" target="_blank">какой-то тег</a>
+                    <div class="tags-container">
+                        <div class="tags-block">
+                            <span>тэги:</span>
+                            <a class="tags-link" href="#" target="_blank">успех</a>,
+                            <a class="tags-link" href="#" target="_blank">акции</a>,
+                            <a class="tags-link" href="#" target="_blank">тэг</a>,
+                            <a class="tags-link" href="#" target="_blank">пенсия</a>,
+                            <a class="tags-link" href="#" target="_blank">какой-то тег</a>
+                        </div>
+                        <div class="error-text">
+                            <i>Если вы заметили ошибку, выделите необходимый текст и нажмите Ctrl+Enter,
+                                чтобы сообщить об этом редакции.</i>
+                        </div>
                     </div>
-                    <div class="error-text">
-                      <i>Если вы заметили ошибку, выделите необходимый текст и нажмите Ctrl+Enter,
-                      чтобы сообщить об этом редакции.</i>
-                    </div>
-                  </div>
                 </div>
-              <div class="some-news__wrapper">
-                <a class="some-news-link" href="#" target="_blank">читайте также >></a>
-              </div>
-
-
+                <div class="some-news__wrapper">
+                    <a class="some-news-link" href="#" target="_blank">читайте также >></a>
+                </div>
             </div>
-            <div class="aside-news__container"></div>
+            <aside class="aside-news__wrapper">
+                <div class="city-news__container">
+                    <div class="city-news__header-container">
+                        <a class="aside-header-link" href="#" target="_blank">Новости России >></a>
+                    </div>
+                    <div class="city-news__sub-header">
+                        <a class="sub-header-link" href="#" target="_blank">Последние</a>
+                        <a class="sub-header-link" href="#" target="_blank">Популярные</a>
+                        <a class="sub-header-link" href="#" target="_blank">Комментируемые</a>
+                    </div>
+                    <div class="city-news__content-container">
+                        <div class="ranked-news">
+                            <img class="news-img" src="./assets/img/2484814.jpg" alt="news image">
+                            <a class="news-link" href="">Россия закрывает границу из-за пандемии
+                                Россия закрывает границу из-за пандемии</a>
+                        </div>
+                        <div class="not-ranked-news">
+                            <div class="news-article">
+                                <p>
+                                    <a class="article-link" href="#">В России более тысячи случаев коронавируса</a>
+                                    <i class="fas fa-comment-alt"></i>
+                                    <span>500</span>
+                                </p>
+                                <p>
+                                    <a class="article-link"
+                                       href="#">В России зафиксировано 840 случаев коронавируса 109</a>
+                                    <i class="fas fa-comment-alt"></i>
+                                    <span>14</span>
+                                </p>
+                                <p>
+                                    <a class="article-link"
+                                       href="#">В акватории Черного моря упал российский Су-27 81</a>
+                                    <i class="fas fa-comment-alt"></i>
+                                    <span>801</span>
+                                </p>
+                                <p>
+                                    <a class="article-link"
+                                       href="#">В Москве скончались два человека с коронавирусом 93</a>
+                                    <i class="fas fa-comment-alt"></i>
+                                    <span>303</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="plot__container">
+                    <div class="plot-header">
+                        <a class="plot-header-link" href="#">Сюжеты >></a>
+                    </div>
+                    <div class="plot-items">
+                        <img class="plot-item__img" src="assets/img/2484855.jpg" alt=""/>
+                        <a class="plot-item__text" href="#">Итоги 28.03: Девять жертв и “рекорд” Испании</a>
+                    </div>
+                </div>
+            </aside>
         </section>
     </div>
 </div>
