--- a/testTask/index.html
+++ b/testTask/index.html
@@ -426,7 +426,7 @@
                     </div>
                     <div class="city-news__content-container">
                         <div class="ranked-news">
-                            <img class="news-img" src="./assets/img/2484814.jpg" alt="news image">
+                            <img class="news-img" src="assets/img/aside-2.jpg" alt="news image">
                             <a class="news-link" href="">Россия закрывает границу из-за пандемии
                                 Россия закрывает границу из-за пандемии</a>
                         </div>
@@ -464,8 +464,51 @@
                         <a class="plot-header-link" href="#">Сюжеты >></a>
                     </div>
                     <div class="plot-items">
-                        <img class="plot-item__img" src="assets/img/2484855.jpg" alt=""/>
-                        <a class="plot-item__text" href="#">Итоги 28.03: Девять жертв и “рекорд” Испании</a>
+                        <img class="plot-item__img" src="assets/img/aside-1.jpg" alt=""/>
+                        <div class="plot-item__container">
+                            <a class="plot-item__text" href="#">Итоги 28.03: Девять жертв и “рекорд” Испании</a>
+                        </div>
+                    </div>
+                    <div class="plot-items">
+                        <img class="plot-item__img" src="assets/img/aside-1.jpg" alt=""/>
+                        <div class="plot-item__container">
+                            <a class="plot-item__text" href="#">Итоги 28.03: Девять жертв и “рекорд” Испании</a>
+                        </div>
+                    </div>
+                    <div class="plot-items">
+                        <img class="plot-item__img" src="assets/img/aside-1.jpg" alt=""/>
+                        <div class="plot-item__container">
+                            <a class="plot-item__text" href="#">Итоги 28.03: Девять жертв и “рекорд” Испании</a>
+                        </div>
+                    </div>
+                    <div class="plot-items">
+                        <img class="plot-item__img" src="assets/img/aside-1.jpg" alt=""/>
+                        <div class="plot-item__container">
+                            <a class="plot-item__text" href="#">Итоги 28.03: Девять жертв и “рекорд” Испании</a>
+                        </div>
+                    </div>
+                    <div class="plot-items">
+                        <img class="plot-item__img" src="assets/img/aside-1.jpg" alt=""/>
+                        <div class="plot-item__container">
+                            <a class="plot-item__text" href="#">Итоги 28.03: Девять жертв и “рекорд” Испании</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="choice__container">
+                    <div class="choice__header">
+                        <a class="header-link" href="#">Выбор редактора >></a>
+                        <div class="right-arrow__container">
+                            <div class="right-arrow"></div>
+                        </div>
+                        <div class="left-arrow__container">
+                            <div class="left-arrow"></div>
+                        </div>
+                        <div class="header-count">
+                            <span class="count-item">1/4</span>
+                        </div>
+                    </div>
+                    <div class="choice__item">
+                        <img class="choice__item-img" src="assets/img/aside-3.jpg" alt="some photo"/>
                     </div>
                 </div>
             </aside>
