--- a/testTask/index.html
+++ b/testTask/index.html
@@ -509,6 +509,11 @@
                     </div>
                     <div class="choice__item">
                         <img class="choice__item-img" src="assets/img/aside-3.jpg" alt="some photo"/>
+                        <div class="item-title">
+                            <a class="item-title__link" href="#"><em class="author-post">Сюжет</em>
+                                <strong>Пандемия коронавируса. Главные новости на 26.01</strong>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </aside>
