--- a/testTask/index.html
+++ b/testTask/index.html
@@ -514,9 +514,76 @@
                                 <strong>Пандемия коронавируса. Главные новости на 26.01</strong>
                             </a>
                         </div>
+                        <div class="item-info">
+                            <a href="" class="info-link">Новости медицины</a>
+                            <span class="info-link-date"> — 27 марта 2020, 00:00</span>
+                        </div>
+                    </div>
+                    <div class="choice__item ">
+                        <img class="choice__item-img" src="assets/img/aside-3.jpg" alt="some photo"/>
+                        <div class="item-title">
+                            <a class="item-title__link" href="#"><em class="author-post">Сюжет</em>
+                                <strong>Пандемия коронавируса. Главные новости на 26.01</strong>
+                            </a>
+                        </div>
+                        <div class="item-info">
+                            <a href="" class="info-link">Другой тег</a>
+                            <span class="info-link-date"> — 27 марта 2020, 00:00</span>
+                        </div>
+                    </div>
+                    <div class="choice__item choice-item-border">
+                        <div class="item-title">
+                            <a class="item-title__link" href="#">
+                                <em class="author-post">Сюжет</em>
+                                <span class="item-icons">
+                                <i class="fab fa-youtube"></i>
+                                <i class="fas fa-camera"></i>
+                            </span>
+                                <strong>Пандемия коронавируса. Главные новости на 26.01</strong>
+                            </a>
+                        </div>
+                        <div class="item-info">
+                            <a href="" class="info-link">Новости медицины</a>
+                            <span class="info-link-date"> — 27 марта 2020, 00:00</span>
+                        </div>
+                    </div>
+                    <div class="choice__item">
+                        <div class="item-title">
+                            <a class="item-title__link" href="#"><em class="author-post">Сюжет</em>
+                                <strong>Пандемия коронавируса. Главные новости на 26.01</strong>
+                            </a>
+                        </div>
+                        <div class="item-info">
+                            <a href="" class="info-link">Тег какой-нибудь</a>
+                            <span class="info-link-date"> — 27 марта 2020, 00:00</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="social-links__container">
+                    <div class="social-links__header">
+                        <span class="header-link">Корреспондент.нет в социальных сетях</span>
+                    </div>
+                    <div class="social-links__sub-header">
+                        <a href="#" class="sub-header-links">facebook</a>
+                        <a href="#" class="sub-header-links">twitter</a>
+                    </div>
+                    <div class="social-links__API-block">
+                        <a class="api-links" href="#">facebook/twitter API</a>
                     </div>
                 </div>
             </aside>
+        </section>
+        <section class="comments__container">
+            <span>Комментарии >></span>
+            <div class="comments-block">
+                <div class="user-avatar__container">
+                    <div class="user-image">
+                        <img src="./assets/img/userAvatars/10551444_10152239819550738_2643660397784188818_o.jpg" alt="">
+                    </div>
+                </div>
+                <div class="user-message__container"></div>
+                <div class="message-info__container"></div>
+            </div>
         </section>
     </div>
 </div>
