--- a/testTask/index.html
+++ b/testTask/index.html
@@ -573,18 +573,9 @@
                 </div>
             </aside>
         </section>
-        <section class="comments__container">
+        <div class="comments__separator">
             <span>Комментарии >></span>
-            <div class="comments-block">
-                <div class="user-avatar__container">
-                    <div class="user-image">
-                        <img src="./assets/img/userAvatars/10551444_10152239819550738_2643660397784188818_o.jpg" alt="">
-                    </div>
-                </div>
-                <div class="user-message__container"></div>
-                <div class="message-info__container"></div>
-            </div>
-        </section>
+        </div>
     </div>
 </div>
 <script src="./assets/js/index.js"></script>
