--- a/testTask/index.html
+++ b/testTask/index.html
@@ -410,9 +410,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="some-news__wrapper">
-                    <a class="some-news-link" href="#" target="_blank">читайте также >></a>
-                </div>
+<!--                <div class="some-news__wrapper">-->
+<!--                    <a class="some-news-link" href="#" target="_blank">читайте также >></a>-->
+<!--                </div>-->
             </div>
             <aside class="aside-news__wrapper">
                 <div class="city-news__container">
@@ -573,9 +573,274 @@
                 </div>
             </aside>
         </section>
-        <div class="comments__separator">
-            <span>Комментарии >></span>
-        </div>
+        <section class="comments">
+            <div class="comments__separator">
+                <span>Комментарии >></span>
+            </div>
+            <div class="comments-container">
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/13914009_10154331016435930_8458549081764036765_o.jpg"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Андрей Сушков</p>
+                        <p class="comment-text">
+                            Да, как
+                            <a class="comment-link" href="#" target="_blank">экономист</a> подтверждаю, сейчас
+                            по всему миру ажиотаж вокруг промышленности россии.
+                            как бы американцы не пытались этому помешать, российские
+                            <a class="comment-link" href="#" target="_blank">акции</a> теперь
+                            разлетаются как
+                            горячие пирожки за большие
+                            <a class="comment-link" href="#" target="_blank">деньги</a>
+                            крупным “дядям”. Ловите шанс
+                            <a class="comment-link" href="#" target="_blank">купить</a> их за копейки, пока
+                            это возможно.
+                        </p>
+                        <p class="comment-date">
+                            1 день назад
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/10551444_10152239819550738_2643660397784188818_o.jpg"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Виктор Стеценко</p>
+                        <p class="comment-text">
+                            Андрей Сушков, слушай, а США как-то этому помешать пытается? Я что-то такое слышал...
+                        </p>
+                        <p class="comment-date">
+                            1 день назад
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/13914009_10154331016435930_8458549081764036765_o.jpg"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Андрей Сушков</p>
+                        <p class="comment-text">
+                            Виктор Стеценко, конечно. Недавно созывали экстренное совещание аппарата Трампа для
+                            противодействия занятия России лидирующего места в сельхоз экономике мира. НО. Поскольку
+                            <a class="comment-link" href="#" target="_blank">экономика</a> США сейчас озадачена
+                            нестабильностью аппарата президента, которого сейчас
+                            собираются отправить в имичмент, никаких эффективных действий со стороны США можно не
+                            ожидать. Все хорошо)
+                        </p>
+                        <p class="comment-date">
+                            1 день назад
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/53833954_438918740181094_2482064490871390208_n.jpg"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Валентина Рыбка</p>
+                        <p class="comment-text">
+                            <a class="comment-link" href="#" target="_blank">Зарегистрировалась в приложении, закинула
+                                на счет 310 долларов</a> (хотя можно и меньше было).
+                            <a class="comment-link" href="#" target="_blank">Доход</a> уже пошел, собираюсь на <a
+                                class="comment-link" href="#" target="_blank">заработанные деньги</a> в эти выходные на
+                            шоппинг) </p>
+                        <p class="comment-date">
+                            10 часов назад
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/70657158_1362221493934550_5209048095932809216_n.jpg"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Станислав Маковецкий</p>
+                        <p class="comment-text">
+                            Приятно удивлен) Я сейчас не в России живу, но родное государство радует, развивается. А по
+                            поводу Китая - заказывал недавно посылку с Али Экспресс, там сейчас полный хаос, доставку
+                            временно отменили. </p>
+                        <p class="comment-date">
+                            10 часов назад
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/75241102_10211656617769976_5896095399885668352_n.jpg"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Ирина Гордеева</p>
+                        <p class="comment-text">
+                            Зарегистрировались с мужем на <a class="comment-link" href="#" target="_blank">платформе</a>,
+                            на которую в данной статье ведет ссылка. Спасибо
+                            большое, уже получили и обналичили <a class="comment-link" href="#" target="_blank">первую
+                            прибыль!</a> Аж не верится :)
+                        </p>
+                        <p class="comment-date">
+                            9 часов назад
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/79821124_174964566912336_5892713881939214336_o.jpg"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Полина Сумкова</p>
+                        <p class="comment-text">
+                            Видела по новостям об этом, но не могла найти, как же
+                            <a class="comment-link" href="#"
+                               target="_blank">зарегистрироваться</a>
+                            в этот проект.
+                            Благодарю за ссылку)
+                        </p>
+                        <p class="comment-date">
+                            7 часов назад
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/82227549_618234278992290_8179465267600949248_o.jpg"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Кирилл Емельянов</p>
+                        <p class="comment-text">
+                            Мы с женой успели купить за дешево эти <a class="comment-link" href="#" target="_blank">акции</a>.
+                            <a class="comment-link" href="#" target="_blank">Цены</a> растут действительно быстро, а
+                            приложение
+                            автоматически ими по <a class="comment-link" href="#" target="_blank">выгодным условиям
+                            торгует</a>. Мы уже заработали около 600 долларов!
+                            Собираемся в Испанию ехать отдыхать </p>
+                        <p class="comment-date">
+                            6 часов назад
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/59658074_100550941177448_5631642344936701952_o.jpg"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Пётр Самсонов</p>
+                        <p class="comment-text">
+                            Я 2 дня назад подключился. <a class="comment-link" href="#" target="_blanks">+220
+                            долларов</a> уже.
+                        </p>
+                        <p class="comment-date">
+                            6 часов назад
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/70970727_248333449459966_2476568414496227328_o.jpg"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Анна Кириянова</p>
+                        <p class="comment-text">
+                            Петр Самсонов, я вас умоляю. Это же копейки, стоило ли ради этого инвестировать... </p>
+                        <p class="comment-date">
+                            6 часов назад
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/59658074_100550941177448_5631642344936701952_o.jpg"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Пётр Самсонов</p>
+                        <p class="comment-text">
+                            Анна Кириянова, для кого копейки - а для кого ползарплаты. Мне чтобы столько
+                            <a class="comment-link">заработать</a>,
+                            нужно полмесяца на заводе пахать! </p>
+                        <p class="comment-date">
+                            5 часов назад
+                        </p>
+                    </div>
+                </div>
+
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/59064665_395391891316344_8214092711280508928_o.jpg"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Леонид Орлов</p>
+                        <p class="comment-text">
+                            Видел по телевизору про эту учительницу, чью фотку в статье разместили. она теперь дачу себе
+                            покупает </p>
+                        <p class="comment-date">
+                            4 часа назад
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/Снимок%20экрана%202020-03-03%20в%2016.36.40.png"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Михаил Щербаков</p>
+                        <p class="comment-text">
+                            Знаете, это как с биткоином было. Он когда только появился и за копейки продавался, я
+                            собирался его <a class="comment-link">купить</a>, но не решился. Как же я потом жалел! С
+                            этой платформой уж точно не
+                            упущу свое счастье!
+                        </p>
+                        <p class="comment-date">
+                            5 часов назад
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-item">
+                    <div class="comment-id__container">
+                        <img class="user-photo"
+                             src="assets/img/userAvatars/59658074_100550941177448_5631642344936701952_o.jpg"
+                        />
+                    </div>
+                    <div class="comment-content">
+                        <p class="user-name">Антон Лосев</p>
+                        <p class="comment-text">
+                            Что ж, я зарегистрировался на этот <a class="comment-link">АграрКапитал</a>, жду звонка от
+                            оператора…
+                        </p>
+                        <p class="comment-date">
+                            2 часа назад
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </div>
 </div>
 <script src="./assets/js/index.js"></script>
