--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="comment-item">
+                <div class="comment-item">ц
                     <div class="comment-id__container">
                         <img class="user-photo"
                              src="assets/img/userAvatars/70657158_1362221493934550_5209048095932809216_n.jpg"
