--- a/index.html
+++ b/index.html
@@ -13,45 +13,45 @@
             crossorigin="anonymous"
             src="https://kit.fontawesome.com/16e54ff964.js"
     ></script>
-    <title>Test Task</title>
+    <title>News Site</title>
 </head>
 
 <body>
 <header>
-    <div class="header-top-wrapper">
-        <div class="header__header-top-nav">
-            <ul class="header-top-nav__list">
-                <li class="header-top-nav__list-item">
-                    <a class="header-top-nav__list-item-link" href="#">рус</a>
+    <div class="header__top-wrapper">
+        <div class="header__top-nav">
+            <ul class="top-nav__list">
+                <li class="top-nav__list-item">
+                    <a class="top-nav__list-item-link" href="#">рус</a>
                 </li>
-                <li class="header-top-nav__list-item">
-                    <a class="header-top-nav__list-item-link" href="#">укр</a>
+                <li class="top-nav__list-item">
+                    <a class="top-nav__list-item-link" href="#">укр</a>
                 </li>
             </ul>
-            <ul class="header-top-nav__list">
-                <li class="header-top-nav__list-item">
-                    <a class="header-top-nav__list-item-link" href="#">журнал</a>
+            <ul class="top-nav__list">
+                <li class="top-nav__list-item">
+                    <a class="top-nav__list-item-link" href="#">журнал</a>
                 </li>
-                <li class="header-top-nav__list-item">
-                    <a class="header-top-nav__list-item-link" href="#">видео</a>
+                <li class="top-nav__list-item">
+                    <a class="top-nav__list-item-link" href="#">видео</a>
                 </li>
-                <li class="header-top-nav__list-item">
-                    <a class="header-top-nav__list-item-link" href="#">фото</a>
+                <li class="top-nav__list-item">
+                    <a class="top-nav__list-item-link" href="#">фото</a>
                 </li>
-                <li class="header-top-nav__list-item">
-                    <a class="header-top-nav__list-item-link" href="#">популярные</a>
+                <li class="top-nav__list-item">
+                    <a class="top-nav__list-item-link" href="#">популярные</a>
                 </li>
-                <li class="header-top-nav__list-item">
-                    <a class="header-top-nav__list-item-link" href="#">лонгриды</a>
+                <li class="top-nav__list-item">
+                    <a class="top-nav__list-item-link" href="#">лонгриды</a>
                 </li>
-                <li class="header-top-nav__list-item">
-                    <a class="header-top-nav__list-item-link" href="#">спецпроекты</a>
+                <li class="top-nav__list-item">
+                    <a class="top-nav__list-item-link" href="#">спецпроекты</a>
                 </li>
             </ul>
         </div>
     </div>
-    <div class="header-mid-wrapper">
-        <div class="header-mid__container">
+    <div class="header__mid-wrapper">
+        <div class="header__mid-container">
             <div class="weather-block">
                 <a class="weather__city-list" href="#"
                 >Ивано-Франковск <i class="fas fa-caret-down"></i>
@@ -81,8 +81,8 @@
             </div>
         </div>
     </div>
-    <div class="header-low-wrapper">
-        <div class="header-low__container">
+    <div class="header__low-wrapper">
+        <div class="header__low-container">
             <ul class="low__nav">
                 <li class="nav__item">
                     <a class="nav__link" href="#">главная</a>
@@ -122,8 +122,8 @@
             </ul>
         </div>
     </div>
-    <div class="header-sub-wrapper">
-        <div class="header-sub__container">
+    <div class="header__sub-wrapper">
+        <div class="header__sub-container">
             <a class="sub__all-news" href="#">все новости раздела</a>
             <a class="sub__fav-news" href="#">россия</a>
         </div>
