--- a/index.html
+++ b/index.html
@@ -185,10 +185,9 @@
                     </div>
                 </div>
                 <div class="img-block">
-                    <img
-                            alt="photo"
-                            class="main-photo"
-                            src="./assets/img/newphoto.png"
+                    <img alt="photo"
+                         class="main-photo"
+                         src="./assets/img/newphoto.png"
                     />
                 </div>
                 <div class="news-block">
